# strava_analytics_mcp

./: .env.example  .gitignore  CLAUDE.local.example.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  claude_desktop_config.example.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
dashboard/: Home.py  db.py  theme.py
dashboard/pages/: 1_📅_Visao_Geral.py  2_📊_Carga_e_Forma.py  3_❤️_Eficiencia.py  4_🏁_Provas.py  5_🌦️_Clima.py  6_🗺️_Rotas.py  7_🎯_Ciclo_Atual.py  8_🔬_Anomalias.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/seeds/: _seeds.yml  manual_races.csv
dbt/tests/: fct_activity_no_data_loss.sql
docs/: BACKLOG.md  COACH_PROMPTS.md  DASHBOARD.md  METRICS.md  QUICKSTART.md  STRAVA_MCP_SPEC.md  TROUBLESHOOTING.md
docs/conversations/: form-diagnosis.md  race-prediction.md  weekly-analysis.md
docs/decisions/: 0001-token-storage-phase1.md  0002-weather-integration-optional.md  0003-ci-scope-local-first.md  0004-bi-monorepo.md  0004-data-layer-duckdb-and-sequencing.md  0005-strava-api-subscription-requirement.md
docs/screenshots/: README.md
examples/: _build_notebook.py  exploration.ipynb
scripts/: dashboard.sh  dbt_docs.sh  seed_athlete_config.py  transform.sh
strava_mcp/: config.py
strava_mcp/analytics/: anomalies.py  best_efforts.py  clustering.py  efficiency.py  injury_risk.py  load.py  narrative.py  ngp.py  performance_drivers.py  plateau.py  predictions.py  weather.py  zones.py
strava_mcp/cli/: main.py
strava_mcp/db/: migrations.py  repositories.py  schema.sql
tests/: test_smoke.py
(+54 files in other folders)
