[project]
name = "strava-analytics-mcp"
version = "0.1.0"
description = "Plataforma pessoal de análise esportiva via Model Context Protocol"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "structlog>=24.0.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
]

[project.scripts]
strava-mcp = "strava_mcp.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strava_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
notebook = [
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "nbformat>=5.10.0",
]
dbt = [
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
]
dashboard = [
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "duckdb>=1.1.0",
]

[tool.ruff]
line-length = 100
extend-exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
